templates/tileserver-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tileserver-ingress2
  namespace: vectoratlas
spec:
  rules:
   - host: test.vectoratlas.icipe.org
     http:  # Correctly formatted 'http' here (no leading '-')
        paths:
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: tileserver  # Name of the service you're routing to
                port:
                  number: 80
  ingressClassName: nginx
